fix(ui): svg chart excessive height / missing colors (#9966)
* increase scoping to override styled component styles for project-filters-chart class

* remove width: 100% and height: 100% from figure component because it is overriding traditional width and height styles

--- a/src/sentry/static/sentry/less/project-settings.less
+++ b/src/sentry/static/sentry/less/project-settings.less
@@ -15,8 +15,11 @@
 .filtered-stats-barchart {
   height: 100px;
 
-  a {
-    > span {
+  a,
+  g {
+    > span,
+    > rect,
+    &:hover > rect {
       left: 2px;
       right: 2px;
 
